--- a/src/TTFWebFormsToMvc.Tests/TTFWebFormsToMvc.Tests.csproj
+++ b/src/TTFWebFormsToMvc.Tests/TTFWebFormsToMvc.Tests.csproj
@@ -52,7 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DummyTests.cs" />
+    <Compile Include="Web\JsonHelpersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
