--- a/src/TTFWebFormsToMvc.Web/Web.config
+++ b/src/TTFWebFormsToMvc.Web/Web.config
@@ -7,45 +7,24 @@
 
 <configuration>
 
-  <connectionStrings>
-    <add name="ApplicationServices" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\aspnetdb.mdf;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <connectionStrings>
+    </connectionStrings>
 
-  <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <system.web>
+        <compilation debug="true" targetFramework="4.0" />
 
-    <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login.aspx" timeout="2880" />
-    </authentication>
+        <authentication mode="Forms">
+            <forms loginUrl="~/admin/login.aspx" timeout="2880" defaultUrl="~/default.aspx">
+                <credentials passwordFormat="Clear">
+                    <user name="joshua" password="ttf" />
+                </credentials>
+            </forms>
+        </authentication>
 
-    <membership>
-      <providers>
-        <clear/>
-        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices"
-             enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"
-             maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10"
-             applicationName="/" />
-      </providers>
-    </membership>
+    </system.web>
 
-    <profile>
-      <providers>
-        <clear/>
-        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/"/>
-      </providers>
-    </profile>
-
-    <roleManager enabled="false">
-      <providers>
-        <clear/>
-        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/" />
-        <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
-      </providers>
-    </roleManager>
-  </system.web>
-  <system.webServer>
-     <modules runAllManagedModulesForAllRequests="true"/>
-  </system.webServer>
+    <system.webServer>
+        <modules runAllManagedModulesForAllRequests="true"/>
+    </system.webServer>
 
 </configuration>
