--- a/src/TTFWebFormsToMvc.Web/TTFWebFormsToMvc.Web.csproj
+++ b/src/TTFWebFormsToMvc.Web/TTFWebFormsToMvc.Web.csproj
@@ -65,6 +65,7 @@
     <Content Include="scripts\jquery-1.6.4-vsdoc.js" />
     <Content Include="scripts\jquery-1.6.4.js" />
     <Content Include="scripts\jquery-1.6.4.min.js" />
+    <Content Include="scripts\main.js" />
     <Content Include="styles\background1_blue.jpg" />
     <Content Include="styles\main.css" />
     <Content Include="Web.config" />
