--- a/src/TTFWebFormsToMvc/TTFWebFormsToMvc.csproj
+++ b/src/TTFWebFormsToMvc/TTFWebFormsToMvc.csproj
@@ -45,6 +45,7 @@
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Web\JsonHelpers.cs" />
+    <Compile Include="Web\SessionDataHelpers.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
