--- a/src/TTFWebFormsToMvc.Web/Web.config
+++ b/src/TTFWebFormsToMvc.Web/Web.config
@@ -13,6 +13,8 @@
     <system.web>
         <compilation debug="true" targetFramework="4.0" />
 
+        <customErrors mode="RemoteOnly" defaultRedirect="~/error.aspx" />
+
         <authentication mode="Forms">
             <forms loginUrl="~/admin/login.aspx" timeout="2880" defaultUrl="~/default.aspx">
                 <credentials passwordFormat="Clear">
