Added /protected/Default.aspx as the secure landing page.

--- a/src/TTFWebFormsToMvc.Web/Web.config
+++ b/src/TTFWebFormsToMvc.Web/Web.config
@@ -16,7 +16,7 @@
         <customErrors mode="RemoteOnly" defaultRedirect="~/error.aspx" />
 
         <authentication mode="Forms">
-            <forms loginUrl="~/protected/login.aspx" timeout="2880" defaultUrl="~/default.aspx">
+            <forms loginUrl="~/protected/login.aspx" timeout="2880" defaultUrl="~/protected/default.aspx">
                 <credentials passwordFormat="Clear">
                     <user name="joshua" password="ttf" />
                 </credentials>
