--- a/src/TTFWebFormsToMvc.Web/TTFWebFormsToMvc.Web.csproj
+++ b/src/TTFWebFormsToMvc.Web/TTFWebFormsToMvc.Web.csproj
@@ -11,7 +11,7 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TTFWebFormsToMvc.Web.Web</RootNamespace>
+    <RootNamespace>TTFWebFormsToMvc.Web</RootNamespace>
     <AssemblyName>TTFWebFormsToMvc.Web</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
@@ -52,6 +52,7 @@
     <Reference Include="System.Web.ApplicationServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="protected\Default.aspx" />
     <Content Include="protected\Login.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Error.aspx" />
@@ -72,8 +73,16 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="protected\Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="protected\Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="protected\Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="protected\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
@@ -103,6 +112,13 @@
       <DependentUpon>MainLayout.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="protected\ProtectedLayout.master.cs">
+      <DependentUpon>ProtectedLayout.master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="protected\ProtectedLayout.master.designer.cs">
+      <DependentUpon>ProtectedLayout.master</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -131,6 +147,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MainLayout.Master" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="protected\ProtectedLayout.master" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
