--- a/src/TTFWebFormsToMvc/TTFWebFormsToMvc.csproj
+++ b/src/TTFWebFormsToMvc/TTFWebFormsToMvc.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EvilException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web\BasePage.cs">
       <SubType>ASPXCodeBehind</SubType>
