Added placeholders for Update Panel and CRUD pages.

--- a/src/TTFWebFormsToMvc.Web/TTFWebFormsToMvc.Web.csproj
+++ b/src/TTFWebFormsToMvc.Web/TTFWebFormsToMvc.Web.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.Web.ApplicationServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ajaxy\placeholder.txt" />
+    <Content Include="crud\placeholder.txt" />
     <Content Include="evil\Throw.aspx" />
     <Content Include="protected\Default.aspx" />
     <Content Include="protected\Login.aspx" />
