Added CRUD pages for product listing, adding, editing and deleting.

--- a/src/TTFWebFormsToMvc.Web/TTFWebFormsToMvc.Web.csproj
+++ b/src/TTFWebFormsToMvc.Web/TTFWebFormsToMvc.Web.csproj
@@ -53,6 +53,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ajaxy\placeholder.txt" />
+    <Content Include="crud\Edit.aspx" />
+    <Content Include="crud\List.aspx" />
     <Content Include="crud\placeholder.txt" />
     <Content Include="evil\Throw.aspx" />
     <Content Include="protected\Default.aspx" />
@@ -78,6 +80,20 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="crud\Edit.aspx.cs">
+      <DependentUpon>Edit.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="crud\Edit.aspx.designer.cs">
+      <DependentUpon>Edit.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="crud\List.aspx.cs">
+      <DependentUpon>List.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="crud\List.aspx.designer.cs">
+      <DependentUpon>List.aspx</DependentUpon>
+    </Compile>
     <Compile Include="evil\Throw.aspx.cs">
       <DependentUpon>Throw.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
