Added StaticRoleProvider with a paragraph on the protected page that only shows to 'admin' users. Updated the crud edit page to show all categories in the combo (for now). Added new master page for the slides and prettified the info slide a bit. Added placeholder Links slide for resource links for further learning. Added JavaScript validation that requires a shipping option to be selected on the CRUD edit page.

--- a/src/TTFWebFormsToMvc.Web/Web.config
+++ b/src/TTFWebFormsToMvc.Web/Web.config
@@ -11,17 +11,38 @@
     </connectionStrings>
 
     <system.web>
-        <compilation debug="true" targetFramework="4.0" />
+        <compilation debug="true"
+                     targetFramework="4.0" />
 
-        <customErrors mode="RemoteOnly" defaultRedirect="~/error.aspx" />
+        <customErrors mode="RemoteOnly"
+                      defaultRedirect="~/error.aspx" />
 
         <authentication mode="Forms">
-            <forms loginUrl="~/protected/login.aspx" timeout="2880" defaultUrl="~/protected/default.aspx">
+
+            <forms loginUrl="~/protected/login.aspx"
+                   timeout="2880"
+                   defaultUrl="~/protected/default.aspx">
+
                 <credentials passwordFormat="Clear">
                     <user name="joshua" password="ttf" />
+                    <user name="other" password="ttf" />
                 </credentials>
+
             </forms>
+
         </authentication>
+
+        <roleManager defaultProvider="StaticRoleProvider"
+                     enabled="true">
+
+            <providers>
+                <clear />
+                <add
+                  name="StaticRoleProvider"
+                  type="TTFWebFormsToMvc.Security.StaticRoleProvider, TTFWebFormsToMvc" />
+            </providers>
+
+        </roleManager>
 
     </system.web>
 
