--- a/src/TTFWebFormsToMvc.Web/TTFWebFormsToMvc.Web.csproj
+++ b/src/TTFWebFormsToMvc.Web/TTFWebFormsToMvc.Web.csproj
@@ -74,9 +74,12 @@
     <Content Include="scripts\jquery-1.6.4.js" />
     <Content Include="scripts\jquery-1.6.4.min.js" />
     <Content Include="scripts\main.js" />
+    <Content Include="scripts\crud\edit.js" />
+    <Content Include="slides\Links.aspx" />
     <Content Include="slides\Me.aspx" />
     <Content Include="styles\background1_blue.jpg" />
     <Content Include="styles\main.css" />
+    <Content Include="styles\slides.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -154,12 +157,26 @@
     <Compile Include="protected\ProtectedLayout.master.designer.cs">
       <DependentUpon>ProtectedLayout.master</DependentUpon>
     </Compile>
+    <Compile Include="slides\Links.aspx.cs">
+      <DependentUpon>Links.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="slides\Links.aspx.designer.cs">
+      <DependentUpon>Links.aspx</DependentUpon>
+    </Compile>
     <Compile Include="slides\Me.aspx.cs">
       <DependentUpon>Me.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="slides\Me.aspx.designer.cs">
       <DependentUpon>Me.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="slides\Slides.Master.cs">
+      <DependentUpon>Slides.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="slides\Slides.Master.designer.cs">
+      <DependentUpon>Slides.Master</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -192,6 +209,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="protected\ProtectedLayout.master" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="slides\Slides.Master" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
