Lots of updates.

--- a/src/TTFWebFormsToMvc.Tests/TTFWebFormsToMvc.Tests.csproj
+++ b/src/TTFWebFormsToMvc.Tests/TTFWebFormsToMvc.Tests.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Areas\Protected\Controllers\HomeControllerTests.cs" />
     <Compile Include="MvcMockHelpers.cs" />
     <Compile Include="Web\JsonHelpersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
