--- a/src/TTFWebFormsToMvc.Web/TTFWebFormsToMvc.Web.csproj
+++ b/src/TTFWebFormsToMvc.Web/TTFWebFormsToMvc.Web.csproj
@@ -8,7 +8,7 @@
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{FFFA644A-24D3-42BD-A088-8DABD8D5D47E}</ProjectGuid>
-    <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
+    <ProjectTypeGuids>{E53F8FEA-EAE0-44A6-8774-FFD645390401};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TTFWebFormsToMvc.Web</RootNamespace>
@@ -95,6 +95,12 @@
     <Compile Include="ajaxy\cruddy.aspx.designer.cs">
       <DependentUpon>cruddy.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Areas\Crud\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Crud\CrudAreaRegistration.cs" />
+    <Compile Include="Areas\Protected\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Protected\ProtectedAreaRegistration.cs" />
+    <Compile Include="Areas\Samples\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Samples\SamplesAreaRegistration.cs" />
     <Compile Include="crud\Edit.aspx.cs">
       <DependentUpon>Edit.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -193,7 +199,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\" />
+    <Folder Include="Areas\Crud\Models\" />
+    <Folder Include="Areas\Crud\Views\Home\" />
+    <Folder Include="Areas\Crud\Views\Shared\" />
+    <Folder Include="Areas\Protected\Models\" />
+    <Folder Include="Areas\Samples\Models\" />
+    <Folder Include="Areas\Samples\Views\Shared\" />
     <Folder Include="Content\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
@@ -231,6 +242,27 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Crud\Views\Web.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Samples\Views\Web.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Samples\Views\Home\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_MainLayout.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Protected\Views\Web.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Protected\Views\Home\Default.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Protected\Views\Shared\_ProtectedLayout.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
