--- a/src/TTFWebFormsToMvc.Web/Web.config
+++ b/src/TTFWebFormsToMvc.Web/Web.config
@@ -70,6 +70,10 @@
             </namespaces>
         </pages>
 
+
+
+        <!--<httpRuntime requestValidationType="TTFWebFormsToMvc.Web.CustomRequestValidator, TTFWebFormsToMvc" />-->
+
     </system.web>
 
     <system.webServer>
