--- a/src/TTFWebFormsToMvc.WebMvcTemplate/TTFWebFormsToMvc.WebMvcTemplate.csproj
+++ b/src/TTFWebFormsToMvc.WebMvcTemplate/TTFWebFormsToMvc.WebMvcTemplate.csproj
@@ -76,6 +76,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\StrongViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
